Nettoyages, ajout des routes, et je dois dodo