@@ -15,35 +15,40 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfiguration {
 
+    // Injection du cors allowed origins. Cela rend mon application plus flexible,
+    // Car les cors ne seront pas les mêmes en fonction de l'environnement
     @Value("${cors.allowedOrigins}")
     private String[] allowedOrigins;
 
+    // Encodeur de mot de passe utilisant bcrypt
     @Bean
     public BCryptPasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    // Gestionnaire d'entrée pour l'authentification JWT
     @Bean
     public JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint() {
         return new JwtAuthenticationEntryPoint();
     }
 
+    // Filtre d'authentification JWT pour les requêtes
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter() {
         return new JwtAuthenticationFilter();
     }
 
+    // Configuration CORS pour autoriser des origines spécifiques
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        //configuration.setAllowedOrigins(List.of(allowedOrigins));
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080", "http://192.168.1.167:8080"));
-
+        configuration.setAllowedOrigins(List.of(allowedOrigins));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
@@ -53,26 +58,29 @@ public class SecurityConfiguration {
         return source;
     }
 
+    // Gestionnaire d'authentification central
     @Bean
     public AuthenticationManager authenticationManagerBean(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
+    // Configuration de la chaîne de filtres de sécurité
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable()) // Désactivation de CSRF, nécésaire pour JWT
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Application de la config CORS
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/student/**").hasRole("STUDENT")
-                        .requestMatchers("/teacher/**").hasRole("TEACHER")
-                        .requestMatchers("/", "/index", "/test/*").permitAll() // Public access
-                        .requestMatchers("/api/users/register", "/api/login").permitAll()
-                        .anyRequest().authenticated()
+                        .requestMatchers("/admin/**").hasRole("ADMIN") // Accès admin
+                        .requestMatchers("/user/**").hasRole("USER") // Accès étudiant
+                        .requestMatchers("/tester/**").hasRole("TESTER") // Accès enseignant
+                        // Accès public a certaines routes, notamment la page d'accueil, l'inscription et le login
+                        .requestMatchers("/", "/index", "/test", "/test/*", "/api/users/register", "/api/login").permitAll()
+                        .anyRequest().authenticated() // Toutes les autres requêtes nécessitent une authentification
                 )
-                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class); // Ajout du filtre JWT, permettant de vérifier le token et le rôle de l'utilisateur
 
         return http.build();
     }
 }
+
